--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,15 @@
 body {
     font-family: 'Open Sans', sans-serif;
+  }
+  
+  #titleDiv {
     color: white;
     -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: goldenrod;
+    
 }
-.parent {
+
+  .parent {
     display: flex;
     height: 900px;
     flex-direction: column;
@@ -37,8 +42,23 @@ body {
     /* background: greenyellow; */
 }
 
+#wins,
+#losses {
+  font-size: 25px;
+  text-align: center;
+  color: white;
+  text-shadow: 0 3px 0 hsla(0, 67%, 69%, 0.17);
+}
+
+.flex-stretch {
+  display: flex;
+  justify-content: space-between;
+  color: black;
+}
+
 .sliding-child {
-    font-family: 'Lobster', cursive;
+    font-family: 'Webdings', cursive;
+    color: white;
     font-size: 30px;
     height: 30px;
     width: 800px;
@@ -67,32 +87,26 @@ h3 {
   text-align: center;
     font-size: 45px;
     width: 800px;
+    color: white;
 }
 
 #answer-display {
-  /* border-radius: 25px;
-  width: 500px;
-  height: 90px;
-  margin: 15px auto;
-  font-weight: bolder;
-  font-size: 35px;
-  padding: 25px; */
   flex-direction: row;
   width: 50%;
   margin: auto;
-  /* background-color: hsla(0, 67%, 69%, 0.17); */
   border-radius: 25px;
 }
 
 
 .answer-child {
     border-radius: 25px;
-    width: 500px;
+    width: 550px;
     height: 70px;
     margin: 15px auto;
     font-weight: bolder;
     font-size: 35px;
     padding: 20px;
+    text-align: center;
     color: whitesmoke;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: lightsteelblue;
@@ -119,6 +133,7 @@ img {
 }
 
 .timer-child {
+  color: white;
     font-style: italic;
     font-size: 20px;
     text-align: center;
