--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ body {
     height: 900px;
     flex-direction: column;
     align-items: center;
-    background-image: url('/assets/images/curtains.jpg');
+    background-image: url('../images/curtains.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     /* background: lavender; */
